--- a/bin/misc/old/install
+++ b/bin/misc/old/install
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/usr/bin/env bash
 INSTALLPATH=$1
 curl "http://git.kali.org/gitweb/?p=packages/debootstrap.git;a=blob_plain;f=scripts/kali;hb=refs/heads/kali/master" > kali-debootstrap &&\
 sudo debootstrap kali-rolling ./$INSTALLPATH http://http.kali.org/kali ./kali-debootstrap
